2007-04-03  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-checkbuilddeps.pl ($control): Remove redundant
	variable.

2007-04-03  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-source.pl (fieldimps): Add 'Uploaders'.

2007-03-25  Nicolas François  <nicolas.francois@centraliens.net>

	* m4/libs.m4: Fix typo (supoprt->support).

2007-03-23  Guillem Jover  <guillem@debian.org>

	* debian/pseudo-tags: Renamed to ...
	* debian/usertags: ... this. Updated with the usertags information.
	* debian/dpkg.docs: Install usertags instead of pseudo-tags.

2007-03-21  Jeffrey W. Baker  <jwbaker@acm.org>
            Guillem Jover  <guillem@debian.org>

	* src/archives.c (wanttoinstall): Use vdew_nonambig instead of
	vdew_never on versiondescribe.
	* src/configure.c (deferred_configure): Likewise.
	* src/query.c (list1package): Likewise.
	* dselect/pkgsublist.cc (packagelist::add): Likewise.
	* dselect/pkgtop.cc (packagelist::redraw1itemsel): Likewise.

2007-03-21  Guillem Jover  <guillem@debian.org>

	* dselect/main.cc: Remove duplicated included files <sys/types.h> and
	<sys/stat.h>. Move <fcntl.h> to the system block.

2007-03-21  Guillem Jover  <guillem@debian.org>

	* dselect/method.h: Fix typo in copyright year ('20001'-> '2001').

2007-03-21  Guillem Jover  <guillem@debian.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Quote the argument.
	(AC_CHECK_HEADERS): Check for 'locale.h'.
	* lib/gettext.h: Updated file from gettext 0.16.1.

2007-03-21  Guillem Jover  <guillem@debian.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.16.1.

2007-03-20  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-source.pl ($diff_ignore_default_regexp): Add '.hg'.

2007-03-13  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl (parsechangelog): Only binmode CDATA from the
	parent side of the opened pipe, on the child side binmode STDOUT.

2007-03-13  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-shlibdeps.pl: Use new style file handler references.
