@@ -1,5 +1,15 @@
 2007-04-03  Guillem Jover  <guillem@debian.org>
 
+	* scripts/controllib.pl: Use defined instead of length, when variables
+	might be undefined.
+	* scripts/update-alternatives.pl: Likewise.
+	* scripts/dpkg-source.pl: Likewise.
+	* scripts/dpkg-genchanges.pl: Likewise.
+	* scripts/dpkg-gencontrol.pl: Likewise.
+	* scripts/dpkg-shlibdeps.pl: Likewise.
+
+2007-04-03  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-checkbuilddeps.pl ($control): Remove redundant
 	variable.
 
